# ugoku-kun

./: .gitignore  .readthedocs.yaml  README.md  as_you_wish.csv  conf.py  control_cannon.ipynb  control_cannon.py  pyproject.toml  temp_docs.md  ugoku_helpers.py  ugoku_kun.py
docs/: api.rst  conf.py  index.rst  overview.rst  requirements.txt  task_csv.rst  temp_docs.md  ugokukun.cannon_wrapper.rst  ugokukun.keigan_wrapper.rst  ugokukun.ugoku_helpers.rst  ugokukun.ugoku_kun.rst
docs/source/: api.rst  conf.py  importers.py
readme_demo/: readme.ipynb
readme_demo/conf/: as_you_wish.csv  camera_setup.csv  device_list.json
readme_demo/dump/: camera_0.json
src/ugokukun/: __init__.py  cannon_wrapper.py  keigan_wrapper.py  ugoku_helpers.py  ugoku_kun.py
tests/: cannon.ipynb  keigan.ipynb  ugoku_kun.ipynb
tests/config/: as_you_wish.csv  device_list.json  device_list_camera_only.json  test.csv
tests/output/: control_cannon_dump.json  log.txt
ugokukun/: __init__.py  cannon_wrapper.py  ugoku_kun.py
